--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: coonective
-description: "A new Flutter package project."
+description: "Pacote Flutter para o conectar API GraphQL"
 version: 0.0.1
-homepage:
+homepage: "coonective.com"
 
 environment:
   sdk: ^3.6.0
@@ -10,6 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  intl: ^0.20.1
+  get_storage: ^2.1.1
+  graphql: ^5.1.3
+  #graphql: ^5.2.0-beta.7
+  graphql_flutter: ^5.1.2
+  #graphql_flutter: ^5.2.0-beta.6
+  logger: ^2.0.2+1
+  hive: ^2.2.3
+  jose: ^0.3.4
+  xxtea: ^2.1.0
+  crypto: ^3.0.3
+  get: ^4.6.6
+
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
