--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_dotenv: ^5.2.1
   intl: ^0.20.1
   get_storage: ^2.1.1
   graphql: ^5.1.3
